Adcm-2086 add negative tests to config groups (#1147)
* ADCM-2087_ add tests for group config changing

Co-authored-by: Sergey Khomutinin <31664571+skhomuti@users.noreply.github.com>
Co-authored-by: Anton Chevychalov <cab@arenadata.io>

--- a/tests/functional/test_config_groups_data/cluster_with_all_group_keys_false/cluster/config.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_all_group_keys_false/cluster/config.yaml
@@ -25,38 +25,36 @@
       config:
         - name: map
           type: json
-        - name: hosts
-          type: string
   config:
     - name: float
       type: float
       required: false
       default: 0.1
-      group_customization: true
+      group_customization: false
     - name: boolean
       type: boolean
       required: true
       default: true
-      group_customization: true
+      group_customization: false
     - name: integer
       type: integer
       required: false
       default: 16
-      group_customization: true
+      group_customization: false
     - name: password
       type: password
       required: false
       default: password
-      group_customization: true
+      group_customization: false
     - name: string
       type: string
       required: true
       default: string
-      group_customization: true
+      group_customization: false
     - name: list
       type: list
       required: false
-      group_customization: true
+      group_customization: false
       default:
         - /dev/rdisk0s1
         - /dev/rdisk0s2
@@ -65,7 +63,7 @@
       type: file
       required: false
       default: ./cluster_file
-      group_customization: true
+      group_customization: false
     - name: option
       type: option
       required: false
@@ -73,17 +71,17 @@
         DAILY: DAILY
         WEEKLY: WEEKLY
       default: DAILY
-      group_customization: true
+      group_customization: false
     - name: text
       type: text
       required: false
       default: text
-      group_customization: true
+      group_customization: false
     - name: group
       type: group
       activatable: True
       active: True
-      group_customization: true
+      group_customization: false
       subs:
         - name: port
           display_name: HTTP port
@@ -93,7 +91,7 @@
           max: 65536
           default: 9200
           required: yes
-          group_customization: true
+          group_customization: false
         - name: transport_port
           display_name: Transport port
           description: Used for communication between nodes in the cluster, by the
@@ -103,12 +101,12 @@
           max: 65536
           default: 9300
           required: yes
-          group_customization: true
+          group_customization: false
     - name: structure
       type: structure
       required: false
       yspec: ./schema.yaml
-      group_customization: true
+      group_customization: false
       default:
         - code: 1
           country: Test1
@@ -117,7 +115,7 @@
     - name: map
       type: map
       required: false
-      group_customization: true
+      group_customization: false
       default:
         age: '24'
         name: Joe
@@ -137,38 +135,36 @@
       config:
         - name: map
           type: json
-        - name: hosts
-          type: string
   config:
     - name: float
       type: float
       required: false
       default: 0.1
-      group_customization: true
+      group_customization: false
     - name: boolean
       type: boolean
       required: true
       default: true
-      group_customization: true
+      group_customization: false
     - name: integer
       type: integer
       required: false
       default: 16
-      group_customization: true
+      group_customization: false
     - name: password
       type: password
       required: false
       default: password
-      group_customization: true
+      group_customization: false
     - name: string
       type: string
       required: true
       default: string
-      group_customization: true
+      group_customization: false
     - name: list
       type: list
       required: false
-      group_customization: true
+      group_customization: false
       default:
         - /dev/rdisk0s1
         - /dev/rdisk0s2
@@ -177,7 +173,7 @@
       type: file
       required: false
       default: ./cluster_file
-      group_customization: true
+      group_customization: false
     - name: option
       type: option
       required: false
@@ -185,17 +181,17 @@
         DAILY: DAILY
         WEEKLY: WEEKLY
       default: DAILY
-      group_customization: true
+      group_customization: false
     - name: text
       type: text
       required: false
       default: text
-      group_customization: true
+      group_customization: false
     - name: group
       type: group
       activatable: True
       active: True
-      group_customization: true
+      group_customization: false
       subs:
        - name: port
          display_name: HTTP port
@@ -205,7 +201,7 @@
          max: 65536
          default: 9200
          required: yes
-         group_customization: true
+         group_customization: false
        - name: transport_port
          display_name: Transport port
          description: Used for communication between nodes in the cluster, by the Java Transport client.
@@ -214,12 +210,12 @@
          max: 65536
          default: 9300
          required: yes
-         group_customization: true
+         group_customization: false
     - name: structure
       type: structure
       required: false
       yspec: ./schema.yaml
-      group_customization: true
+      group_customization: false
       default:
         - code: 1
           country: Test1
@@ -228,7 +224,7 @@
     - name: map
       type: map
       required: false
-      group_customization: true
+      group_customization: false
       default:
         age: '24'
         name: Joe
@@ -247,39 +243,37 @@
           config:
             - name: map
               type: json
-            - name: hosts
-              type: string
 
       config:
         - name: float
           type: float
           required: false
           default: 0.1
-          group_customization: true
+          group_customization: false
         - name: boolean
           type: boolean
           required: true
           default: true
-          group_customization: true
+          group_customization: false
         - name: integer
           type: integer
           required: false
           default: 16
-          group_customization: true
+          group_customization: false
         - name: password
           type: password
           required: false
           default: password
-          group_customization: true
+          group_customization: false
         - name: string
           type: string
           required: true
           default: string
-          group_customization: true
+          group_customization: false
         - name: list
           type: list
           required: false
-          group_customization: true
+          group_customization: false
           default:
             - /dev/rdisk0s1
             - /dev/rdisk0s2
@@ -288,7 +282,7 @@
           type: file
           required: false
           default: ./cluster_file
-          group_customization: true
+          group_customization: false
         - name: option
           type: option
           required: false
@@ -296,17 +290,17 @@
             DAILY: DAILY
             WEEKLY: WEEKLY
           default: DAILY
-          group_customization: true
+          group_customization: false
         - name: text
           type: text
           required: false
           default: text
-          group_customization: true
+          group_customization: false
         - name: group
           type: group
           activatable: True
           active: True
-          group_customization: true
+          group_customization: false
           subs:
            - name: port
              display_name: HTTP port
@@ -316,7 +310,7 @@
              max: 65536
              default: 9200
              required: yes
-             group_customization: true
+             group_customization: false
            - name: transport_port
              display_name: Transport port
              description: Used for communication between nodes in the cluster, by the Java Transport client.
@@ -325,12 +319,12 @@
              max: 65536
              default: 9300
              required: yes
-             group_customization: true
+             group_customization: false
         - name: structure
           type: structure
           required: false
           yspec: ./schema.yaml
-          group_customization: true
+          group_customization: false
           default:
             - code: 1
               country: Test1
@@ -339,7 +333,7 @@
         - name: map
           type: map
           required: false
-          group_customization: true
+          group_customization: false
           default:
             age: '24'
             name: Joe
