Add structure field with yaml validation to adcm_config plugin tests

--- a/tests/functional/test_plugins_config_data/cluster/config.yaml
+++ b/tests/functional/test_plugins_config_data/cluster/config.yaml
@@ -519,6 +519,11 @@
         - "three"
       required: no
 
+    structure:
+      type: structure
+      yspec: structure.yml
+      required: False
+
 - type: service
   name: first
   version: 1
