--- a/tests/functional/test_plugins_config_data/provider/config.yaml
+++ b/tests/functional/test_plugins_config_data/provider/config.yaml
@@ -70,6 +70,11 @@
         - "three"
       required: no
 
+    structure:
+      type: structure
+      yspec: structure.yml
+      required: False
+
   actions: &actions
 
     change_provider_multijob:
