--- a/tests/functional/test_plugins_config_data/cluster/config.yaml
+++ b/tests/functional/test_plugins_config_data/cluster/config.yaml
@@ -522,6 +522,7 @@
     structure:
       type: structure
       yspec: structure.yml
+      default: '{"cluster": [{"cluster_name": "dummy", "shards": 1}]}'
       required: False
 
 - type: service
