ADCM-2192 deleting keys from map in group config tested

--- a/tests/functional/test_config_groups_data/cluster_simple/cluster/dummy_action_cluster.yaml
+++ b/tests/functional/test_config_groups_data/cluster_simple/cluster/dummy_action_cluster.yaml
@@ -19,3 +19,5 @@
       assert:
         that:
           - job.config.map[inventory_hostname].group == cluster.config.group
+        fail_msg: "Expected:\n{{ job.config.map[inventory_hostname].group | to_nice_json }}\n\
+        but actual is:\n {{ cluster.config.group | to_nice_json }} "
