--- a/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/dummy_action_cluster.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/dummy_action_cluster.yaml
@@ -30,3 +30,5 @@
           - job.config.map[inventory_hostname].structure == cluster.config.structure
           - job.config.map[inventory_hostname].map == cluster.config.map
           - job.config.map[inventory_hostname].file == lookup('file', cluster.config.file)
+        fail_msg: "Expected:\n{{ job.config.map[inventory_hostname] | to_nice_json }}\n\
+        but actual is:\n {{ cluster.config | to_nice_json }} "
