--- a/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/dummy_action_service.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/dummy_action_service.yaml
@@ -30,3 +30,5 @@
           - job.config.map[inventory_hostname].structure == services.test_service_1.config.structure
           - job.config.map[inventory_hostname].map == services.test_service_1.config.map
           - job.config.map[inventory_hostname].file == lookup('file', services.test_service_1.config.file)
+        fail_msg: "Expected:\n{{ job.config.map[inventory_hostname] | to_nice_json }}\n\
+        but actual is:\n {{ services.test_service_1.config | to_nice_json }} "
