--- a/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/config.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/config.yaml
@@ -108,6 +108,13 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '24'
+        name: Joe
+        sex: m
 
 - name: test_service_1
   type: service
@@ -205,6 +212,13 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '24'
+        name: Joe
+        sex: m
   components:
     first:
       constraint: [1,+]
@@ -297,6 +311,13 @@
               country: Test2
         - name: map
           type: map
+          required: false
+          default:
+            age: '24'
+            name: Joe
+            sex: m
+        - name: json
+          type: json
           required: false
           default:
             age: '24'
