--- a/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/config.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/config.yaml
@@ -122,6 +122,14 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      group_customization: true
+      default:
+        age: '24'
+        name: Joe
+        sex: m
 
 - name: test_service_1
   type: service
@@ -233,6 +241,14 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      group_customization: true
+      default:
+        age: '24'
+        name: Joe
+        sex: m
   components:
     first:
       constraint: [1,+]
@@ -338,6 +354,14 @@
               country: Test2
         - name: map
           type: map
+          required: false
+          group_customization: true
+          default:
+            age: '24'
+            name: Joe
+            sex: m
+        - name: json
+          type: json
           required: false
           group_customization: true
           default:
