ADCM-1586 Config field type `secrettext` added to previously created tests

--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_new_default_value/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_new_default_value/config.yaml
@@ -95,6 +95,11 @@
         age: '25'
         name: Jane
         sex: f
+    - &secrettext
+      name: secrettext
+      type: secrettext
+      required: false
+      default: "new\nidentity"
 
 - type: service
   name: test_service
@@ -173,6 +178,7 @@
         age: '25'
         name: Jane
         sex: f
+    - *secrettext
 
   components:
     test_component:
@@ -250,3 +256,4 @@
             age: '25'
             name: Jane
             sex: f
+        - *secrettext
