--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_new_fields/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_new_fields/config.yaml
@@ -158,7 +158,11 @@
       default:
         time: '12'
         range: 'super long'
-
+    - &secrettext
+      name: secrettext
+      type: secrettext
+      required: false
+      default: "sec\nret\ntext"
 - type: service
   name: test_service
   version: 1.6
@@ -299,6 +303,7 @@
       default:
         time: '12'
         range: 'super long'
+    - *secrettext
 
   components:
     test_component:
@@ -439,3 +444,4 @@
           default:
             time: '12'
             range: 'super long'
+        - *secrettext
