--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_group_configs_with_changed_types/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_group_configs_with_changed_types/config.yaml
@@ -98,6 +98,11 @@
         age: '24'
         name: Joe
         sex: m
+    - &secrettext
+      name: secrettext
+      type: text
+      required: false
+      default: "sec\nret\ntext"
 
 - type: service
   name: test_service
@@ -179,6 +184,7 @@
         age: '24'
         name: Joe
         sex: m
+    - *secrettext
 
   components:
     test_component:
@@ -259,3 +265,4 @@
             age: '24'
             name: Joe
             sex: m
+        - *secrettext
