--- a/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_configs_with_new_fields/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_configs_with_new_fields/config.yaml
@@ -158,6 +158,10 @@
       default:
         time: '12'
         range: 'super long'
+    - name: secrettext
+      type: secrettext
+      required: false
+      default: "sec\nret\ntext"
 
 - type: host
   name: host_from_provider
