--- a/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_changed_group_customisation/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_changed_group_customisation/config.yaml
@@ -103,6 +103,11 @@
         age: '24'
         name: Joe
         sex: m
+    - name: secrettext
+      type: secrettext
+      required: false
+      default: "sec\nret\ntext"
+      group_customization: true
 
 - type: host
   name: host_from_provider
