--- a/tests/functional/test_config_after_upgrade_data/provider_with_configs/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_with_configs/config.yaml
@@ -89,6 +89,10 @@
         age: '24'
         name: Joe
         sex: m
+    - name: secrettext
+      type: secrettext
+      required: false
+      default: "sec\nret\ntext"
 
 - type: host
   name: host_from_provider
