--- a/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/config.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/config.yaml
@@ -122,6 +122,12 @@
         age: '24'
         name: Joe
         sex: m
+    - &secrettext
+      name: secrettext
+      type: secrettext
+      required: false
+      group_customization: true
+      default: "secret\npass\nword"
 
 - name: test_service_1
   type: service
@@ -233,6 +239,8 @@
         age: '24'
         name: Joe
         sex: m
+    - *secrettext
+
   components:
     first:
       constraint: [1,+]
@@ -344,6 +352,8 @@
             age: '24'
             name: Joe
             sex: m
+        - *secrettext
+
     second:
       constraint: [1,+]
 
