--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_changed_types/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_changed_types/config.yaml
@@ -97,6 +97,11 @@
         age: '24'
         name: Joe
         sex: m
+    - &secrettext
+      name: secrettext
+      type: secrettext
+      required: false
+      default: "sec\nret\ntext"
 
 - type: service
   name: test_service
@@ -177,6 +182,7 @@
         age: '24'
         name: Joe
         sex: m
+    - *secrettext
 
   components:
     test_component:
@@ -256,3 +262,4 @@
             age: '24'
             name: Joe
             sex: m
+        - *secrettext
