--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_group_configs_with_changed_group_customisation/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_group_configs_with_changed_group_customisation/config.yaml
@@ -103,6 +103,12 @@
         age: '24'
         name: Joe
         sex: m
+    - &secrettext
+      name: secrettext
+      type: secrettext
+      required: false
+      default: "sec\nret\ntext"
+      group_customization: true
 
 - type: service
   name: test_service
@@ -189,6 +195,7 @@
         age: '24'
         name: Joe
         sex: m
+    - *secrettext
 
   components:
     test_component:
@@ -274,3 +281,4 @@
             age: '24'
             name: Joe
             sex: m
+        - *secrettext
