--- a/tests/functional/test_config_after_upgrade_data/cluster_with_configs/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_with_configs/config.yaml
@@ -89,6 +89,11 @@
         age: '24'
         name: Joe
         sex: m
+    - &secrettext
+      name: secrettext
+      type: secrettext
+      required: false
+      default: "sec\nret\ntext"
 
 - type: service
   name: test_service
@@ -169,6 +174,7 @@
         age: '24'
         name: Joe
         sex: m
+    - *secrettext
 
   components:
     test_component:
@@ -248,3 +254,4 @@
             age: '24'
             name: Joe
             sex: m
+        - *secrettext
