--- a/tests/functional/test_config_after_upgrade_data/cluster_with_group_configs/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_with_group_configs/config.yaml
@@ -90,6 +90,11 @@
         age: '24'
         name: Joe
         sex: m
+    - &secrettext
+      name: secrettext
+      type: secrettext
+      required: false
+      default: "sec\nret\ntext"
 
 - type: service
   name: test_service
@@ -171,6 +176,7 @@
         age: '24'
         name: Joe
         sex: m
+    - *secrettext
 
   components:
     test_component:
@@ -251,3 +257,4 @@
             age: '24'
             name: Joe
             sex: m
+        - *secrettext
