--- a/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_configs_with_changed_types/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_configs_with_changed_types/config.yaml
@@ -97,6 +97,10 @@
         age: '24'
         name: Joe
         sex: m
+    - name: secrettext
+      type: text
+      required: false
+      default: "sec\nret\ntext"
 
 - type: host
   name: host_from_provider
