--- a/tests/functional/test_config_groups_data/provider_group_with_config_group_custom/provider/config.yaml
+++ b/tests/functional/test_config_groups_data/provider_group_with_config_group_custom/provider/config.yaml
@@ -106,6 +106,10 @@
         age: '24'
         name: Joe
         sex: m
+    - name: secrettext
+      type: secrettext
+      required: false
+      default: "secret\npass\nword"
 
 - type: host
   name: host_from_provider
