ADCM-1586 Add secrettext checks to action files in config group tests and missed group_customization flag fix

--- a/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/dummy_action_cluster.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/dummy_action_cluster.yaml
@@ -30,3 +30,4 @@
           - job.config.map[inventory_hostname].structure == cluster.config.structure
           - job.config.map[inventory_hostname].map == cluster.config.map
           - job.config.map[inventory_hostname].file == lookup('file', cluster.config.file)
+          - job.config.map[inventory_hostname].secrettext == cluster.config.secrettext
