--- a/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/dummy_action_component.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/dummy_action_component.yaml
@@ -30,3 +30,4 @@
           - job.config.map[inventory_hostname].structure == services.test_service_1.first.config.structure
           - job.config.map[inventory_hostname].map == services.test_service_1.first.config.map
           - job.config.map[inventory_hostname].file == lookup('file', services.test_service_1.first.config.file)
+          - job.config.map[inventory_hostname].secrettext == services.test_service_1.first.config.secrettext
