--- a/tests/functional/test_config_groups_data/provider_group_with_all_params/provider/config.yaml
+++ b/tests/functional/test_config_groups_data/provider_group_with_all_params/provider/config.yaml
@@ -124,6 +124,7 @@
       type: secrettext
       required: false
       default: "secret\npass\nword"
+      group_customization: true
 
 - type: host
   name: host_from_provider
