--- a/tests/functional/test_config_groups_data/provider_group_with_all_params/provider/dummy_action_provider.yaml
+++ b/tests/functional/test_config_groups_data/provider_group_with_all_params/provider/dummy_action_provider.yaml
@@ -30,3 +30,4 @@
           - job.config.map[inventory_hostname].structure == provider.config.structure
           - job.config.map[inventory_hostname].map == provider.config.map
           - job.config.map[inventory_hostname].file == lookup('file', provider.config.file)
+          - job.config.map[inventory_hostname].secrettext == provider.config.secrettext
