--- a/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/dummy_action_component.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_group_all_params/cluster/dummy_action_component.yaml
@@ -29,4 +29,7 @@
           - job.config.map[inventory_hostname].group == services.test_service_1.first.config.group
           - job.config.map[inventory_hostname].structure == services.test_service_1.first.config.structure
           - job.config.map[inventory_hostname].map == services.test_service_1.first.config.map
+          - job.config.map[inventory_hostname].json == services.test_service_1.first.config.json
           - job.config.map[inventory_hostname].file == lookup('file', services.test_service_1.first.config.file)
+        fail_msg: "Expected:\n{{ job.config.map[inventory_hostname] | to_nice_json }}\n\
+        but actual is:\n {{ services.test_service_1.first.config | to_nice_json }} "
