Add json field for upgrade tests

--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_new_default_value/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_new_default_value/config.yaml
@@ -95,6 +95,13 @@
         age: '25'
         name: Jane
         sex: f
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '25'
+        name: Jane
+        sex: f
     - &secrettext
       name: secrettext
       type: secrettext
@@ -178,6 +185,13 @@
         age: '25'
         name: Jane
         sex: f
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '25'
+        name: Jane
+        sex: f
     - *secrettext
 
   components:
@@ -251,6 +265,13 @@
               country: Test1_new
         - name: map
           type: map
+          required: false
+          default:
+            age: '25'
+            name: Jane
+            sex: f
+        - name: json
+          type: json
           required: false
           default:
             age: '25'
