--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_group_configs_with_new_default_value/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_group_configs_with_new_default_value/config.yaml
@@ -96,6 +96,13 @@
         age: '25'
         name: Jane
         sex: f
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '25'
+        name: Jane
+        sex: f
     - &secrettext
       name: secrettext
       type: secrettext
@@ -180,6 +187,13 @@
         age: '25'
         name: Jane
         sex: f
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '25'
+        name: Jane
+        sex: f
     - *secrettext
 
   components:
@@ -254,6 +268,13 @@
               country: Test1_new
         - name: map
           type: map
+          required: false
+          default:
+            age: '25'
+            name: Jane
+            sex: f
+        - name: json
+          type: json
           required: false
           default:
             age: '25'
