--- a/tests/functional/test_config_after_upgrade_data/cluster_with_configs/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_with_configs/config.yaml
@@ -89,6 +89,13 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '24'
+        name: Joe
+        sex: m
     - &secrettext
       name: secrettext
       type: secrettext
@@ -174,6 +181,13 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '24'
+        name: Joe
+        sex: m
     - *secrettext
 
   components:
@@ -249,6 +263,13 @@
               country: Test2
         - name: map
           type: map
+          required: false
+          default:
+            age: '24'
+            name: Joe
+            sex: m
+        - name: json
+          type: json
           required: false
           default:
             age: '24'
