--- a/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_configs_with_new_default_value/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_configs_with_new_default_value/config.yaml
@@ -95,6 +95,13 @@
         age: '25'
         name: Jane
         sex: f
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '25'
+        name: Jane
+        sex: f
     - name: secrettext
       type: secrettext
       required: false
