--- a/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_changed_types/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_for_upgrade_with_configs_with_changed_types/config.yaml
@@ -97,6 +97,13 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '24'
+        name: Joe
+        sex: m
     - &secrettext
       name: secrettext
       type: secrettext
@@ -182,6 +189,13 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '24'
+        name: Joe
+        sex: m
     - *secrettext
 
   components:
@@ -257,6 +271,13 @@
               country: Test2
         - name: map
           type: map
+          required: false
+          default:
+            age: '24'
+            name: Joe
+            sex: m
+        - name: json
+          type: json
           required: false
           default:
             age: '24'
