--- a/tests/functional/test_config_after_upgrade_data/cluster_with_group_configs/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/cluster_with_group_configs/config.yaml
@@ -90,6 +90,13 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '24'
+        name: Joe
+        sex: m
     - &secrettext
       name: secrettext
       type: secrettext
@@ -176,6 +183,13 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '24'
+        name: Joe
+        sex: m
     - *secrettext
 
   components:
@@ -252,6 +266,13 @@
               country: Test2
         - name: map
           type: map
+          required: false
+          default:
+            age: '24'
+            name: Joe
+            sex: m
+        - name: json
+          type: json
           required: false
           default:
             age: '24'
