--- a/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_changed_types/config.yaml
+++ b/tests/functional/test_config_after_upgrade_data/provider_for_upgrade_with_group_configs_with_changed_types/config.yaml
@@ -98,6 +98,13 @@
         age: '24'
         name: Joe
         sex: m
+    - name: json
+      type: json
+      required: false
+      default:
+        age: '24'
+        name: Joe
+        sex: m
     - name: secrettext
       type: text
       required: false
