Add multijob actions for group config tests

--- a/tests/functional/test_config_groups_data/cluster_simple/cluster/config.yaml
+++ b/tests/functional/test_config_groups_data/cluster_simple/cluster/config.yaml
@@ -50,6 +50,20 @@
       config:
         - name: map
           type: json
+    test_action_multijob:
+      type: task
+      scripts:
+        - name: part1
+          script_type: ansible
+          script: ./dummy_action_cluster.yaml
+        - name: part2
+          script_type: ansible
+          script: ./dummy_action_cluster.yaml
+      states:
+        available: any
+      config:
+        - name: map
+          type: json
 
 - type: service
   name: test_service_1
