--- a/tests/functional/test_config_groups_data/cluster_with_all_group_keys_false/cluster/config.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_all_group_keys_false/cluster/config.yaml
@@ -25,6 +25,20 @@
       config:
         - name: map
           type: json
+    test_action_multijob:
+      type: task
+      scripts:
+        - name: part1
+          script_type: ansible
+          script: ./dummy_action_cluster.yaml
+        - name: part2
+          script_type: ansible
+          script: ./dummy_action_cluster.yaml
+      states:
+        available: any
+      config:
+        - name: map
+          type: json
   config:
     - name: float
       type: float
@@ -143,6 +157,20 @@
       config:
         - name: map
           type: json
+    test_action_multijob:
+      type: task
+      scripts:
+        - name: part1
+          script_type: ansible
+          script: ./dummy_action_service.yaml
+        - name: part2
+          script_type: ansible
+          script: ./dummy_action_service.yaml
+      states:
+        available: any
+      config:
+        - name: map
+          type: json
   config:
     - name: float
       type: float
@@ -254,6 +282,20 @@
           type: job
           script: ./dummy_action_component.yaml
           script_type: ansible
+          states:
+            available: any
+          config:
+            - name: map
+              type: json
+        test_action_multijob:
+          type: task
+          scripts:
+            - name: part1
+              script_type: ansible
+              script: ./dummy_action_component.yaml
+            - name: part2
+              script_type: ansible
+              script: ./dummy_action_component.yaml
           states:
             available: any
           config:
