--- a/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/config.yaml
+++ b/tests/functional/test_config_groups_data/cluster_with_config_group_custom/cluster/config.yaml
@@ -27,6 +27,22 @@
           type: json
         - name: hosts
           type: string
+    test_action_multijob:
+      type: task
+      scripts:
+        - name: part1
+          script_type: ansible
+          script: ./dummy_action_cluster.yaml
+        - name: part2
+          script_type: ansible
+          script: ./dummy_action_cluster.yaml
+      states:
+        available: any
+      config:
+        - name: map
+          type: json
+        - name: hosts
+          type: string
   config:
     - name: float
       type: float
@@ -132,6 +148,22 @@
           type: json
         - name: hosts
           type: string
+    test_action_multijob:
+      type: task
+      scripts:
+        - name: part1
+          script_type: ansible
+          script: ./dummy_action_service.yaml
+        - name: part2
+          script_type: ansible
+          script: ./dummy_action_service.yaml
+      states:
+        available: any
+      config:
+        - name: map
+          type: json
+        - name: hosts
+          type: string
   config:
     - name: float
       type: float
@@ -228,6 +260,22 @@
           type: job
           script: ./dummy_action_component.yaml
           script_type: ansible
+          states:
+            available: any
+          config:
+            - name: map
+              type: json
+            - name: hosts
+              type: string
+        test_action_multijob:
+          type: task
+          scripts:
+            - name: part1
+              script_type: ansible
+              script: ./dummy_action_component.yaml
+            - name: part2
+              script_type: ansible
+              script: ./dummy_action_component.yaml
           states:
             available: any
           config:
