--- a/tests/functional/test_config_groups_data/provider_group_with_all_group_keys_false/provider/config.yaml
+++ b/tests/functional/test_config_groups_data/provider_group_with_all_group_keys_false/provider/config.yaml
@@ -24,6 +24,20 @@
       config:
         - name: map
           type: json
+    test_action_multijob:
+      type: task
+      scripts:
+        - name: part1
+          script_type: ansible
+          script: ./dummy_action_provider.yaml
+        - name: part2
+          script_type: ansible
+          script: ./dummy_action_provider.yaml
+      states:
+        available: any
+      config:
+        - name: map
+          type: json
   config:
     - name: float
       type: float
